<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/curved_wighte_top"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairobold"
        android:text=""
        android:textColor="@color/purple_500"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairobold"
        android:text="@string/client_name"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/sp16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/order_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/mo_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        app:layout_constraintStart_toEndOf="@+id/order_name_id"
        app:layout_constraintTop_toTopOf="@+id/order_name_id" />


    <TextView
        android:id="@+id/order_number_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_baseline_phone_forwarded_24"
        android:drawablePadding="@dimen/dimen8"
        android:fontFamily="@font/cairo_regular"
        android:text="+201150706829"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_name_id" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/address_details_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairobold"
        android:text="@string/title_address"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/sp16"
        app:layout_constraintStart_toStartOf="@+id/order_number_id"
        app:layout_constraintTop_toBottomOf="@+id/order_number_id" />

    <TextView
        android:id="@+id/adress_details_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/add_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        app:layout_constraintStart_toEndOf="@+id/address_details_const"
        app:layout_constraintTop_toTopOf="@+id/address_details_const" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/cairobold"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="@dimen/sp16"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_details_value"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>